# DiscoGrad

./: .gitignore  CITATION.bib  LICENSE.txt  README.md  _clang-format  build_docs.sh  doxygen.conf  smooth_compile
backend/: args.cpp  args.h  discograd.hpp  genann.hpp  globals.hpp
backend/ad/: avec.hpp  fw_ad.hpp
backend/crisp/: discograd.hpp
backend/discograd_gradient_oracle/: boolvector.hpp  discograd.hpp  globals.cpp  kde.hpp
backend/polyak_gradient_oracle/: discograd.hpp
backend/reinforce/: discograd.hpp
backend/rloo/: discograd.hpp
backend/si/: discograd.hpp  si_constants.hpp  si_state.hpp  si_types.hpp
backend/torch_wrapper/: torch_wrapper.hpp
programs/ac/: ac.cpp  plot_temps.py
programs/ac/ac_genann/: ac.cpp
programs/ac/ac_torch/: ac.cpp
programs/crowd/: vec2.hpp
programs/crowd/selection/: crowd.cpp
programs/crowd/sf_params/: crowd.cpp
programs/epidemics/: epidemics.cpp  generate_args.py  generate_network.py  generate_reference.sh  network.txt  plot_reference.py  ref_args.txt  reference.csv
programs/hello_world/: hello_world.cpp  hello_world_normalized.cpp
programs/hotel/: hotel.cpp
programs/synthetic_example/: synthetic_example.cpp
programs/traffic/: traffic.cpp
programs/traffic_grid_populations/: generate_scaled_variants.sh  traffic_grid_populations_10x10.cpp  traffic_grid_populations_20x20.cpp  traffic_grid_populations_2x2.cpp  traffic_grid_populations_40x40.cpp  traffic_grid_populations_5x5.cpp
publication/: README.md  reproduce.py  reproduce_functions.py  requirements.txt
publication/experiments/: .gitignore  estimator_wrappers.py  plot.py
publication/experiments/gradient_evaluation/: combine_plots.sh  experiment_common.py  mse.py  run.py  var.py  visual_mse.py
publication/experiments/gradient_evaluation/experiments/: generate.py  get_best_params.py  reproduce_ieee_paper.sh
publication/experiments/gradient_evaluation/experiments/epidemics/: experiment.py  ref_args.txt
publication/experiments/gradient_evaluation/experiments/execution_time/: draw_slowdown_heatmap.py
publication/experiments/gradient_evaluation/experiments/hotel/: experiment.py  ref_args.txt
publication/experiments/gradient_evaluation/experiments/nn_thermostat/: experiment.py  ref_args.txt
publication/experiments/gradient_evaluation/experiments/synthetic_example/: experiment.py
publication/experiments/gradient_evaluation/experiments/traffic5x5/: ref_args.txt
publication/experiments/optimization/: abstract_optimizer.py  check_completeness.py  draw_optimization_plots.py  draw_progress_heatmap.py  ensmallen_optimizers.py  experiment_common.py  find_best.py  get_cmd_line.py  get_weights.py  optimize.py  optimizers.py  pyeasyga.py  summarize.py  visualize_params.py
publication/experiments/optimization/paper_experiments/ac_local/: experiment.py
transformation/: CMakeLists.txt  compile.sh  insert_func_incr.cpp  normalize.cpp  serialize.hpp  smooth_dgo.cpp  smooth_dgsi.cpp
(+20 files in other folders)
